--- a/external/audio_mamba/examples/finetuning/inference.ipynb
+++ b/external/audio_mamba/examples/finetuning/inference.ipynb
@@ -29,18 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convenient for importing modules from the parent directory\n",
-    "import sys\n",
-    "sys.path.append(\"../../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,34 +56,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Install the gdown package to download a model from the gdrive link\n",
-    "# !pip install gdown\n",
-    "\n",
-    "# import gdown\n",
-    "\n",
-    "# # model link and save path information\n",
-    "# gdrive_link = 'https://drive.google.com/file/d/1spsJXncpEXHKmIvDcB7ddkcgrzARpEeK/view?usp=drive_link'\n",
-    "# model_base_path = 'models/'\n",
-    "# model_name = 'aum-base_audioset-vggsound.pth'\n",
-    "# model_path = model_base_path + model_name\n",
-    "\n",
-    "# # check if the directory exists\n",
-    "# if not os.path.exists(model_base_path):\n",
-    "#     os.makedirs(model_base_path)\n",
-    "#     # make a downloadable link and downlaod the model\n",
-    "#     model_link = f'https://drive.google.com/uc?id={gdrive_link.split(\"/\")[-2]}'\n",
-    "#     gdown.download(model_link, model_path, quiet=False)\n",
-    "#     print(f'Model downloaded and saved to {model_path}')\n",
-    "# else:\n",
-    "#     print(f\"Model already exists in {model_base_path}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +79,11 @@
     "# Arguments about the model\n",
     "model_args = Namespace(\n",
     "    model_type = 'base',\n",
-    "    n_classes = 4,\n",
+    "    n_classes = 5,\n",
     "    imagenet_pretrain = False,\n",
     "    imagenet_pretrain_path = None,\n",
     "    aum_pretrain = True,\n",
-    "    aum_pretrain_path = 'models/checkpoints/audio_mamba_ft.pth',\n",
+    "    aum_pretrain_path = 'checkpoints/audio_mamba_simple.pth',\n",
     "    aum_variant = 'Fo-Bi',\n",
     "    device = 'cuda',\n",
     ")"
@@ -130,14 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<All keys matched successfully>\n",
+      "Num classes differ! Can only load the backbone weights.\n",
+      "_IncompatibleKeys(missing_keys=['head.weight', 'head.bias'], unexpected_keys=[])\n",
       "Resize function is resample_patch_embed\n",
       "Initializing FlexiPatchEmbed with the following parameters:\n",
       "patch_size=(16, 16), in_chans=1, embed_dim=768, bias=True, norm_layer=None, flatten=True, proj_load=yes, resize_func=resample_patch_embed\n",
@@ -156,7 +118,7 @@
      "data": {
       "text/plain": [
        "AudioMamba(\n",
-       "  (head): Linear(in_features=768, out_features=4, bias=True)\n",
+       "  (head): Linear(in_features=768, out_features=5, bias=True)\n",
        "  (drop_path): Identity()\n",
        "  (layers): ModuleList(\n",
        "    (0-23): 24 x Block(\n",
@@ -182,7 +144,7 @@
        ")"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -363,10 +325,11 @@
      "output_type": "stream",
      "text": [
       "The top 5 predictions are:\n",
-      "cough 0.9985574\n",
-      "siren 0.010548095\n",
-      "gun_shot 0.0039014828\n",
-      "dog_bark 0.002903801\n",
+      "car_horn 0.59299445\n",
+      "cough 0.5522154\n",
+      "siren 0.5046434\n",
+      "dog_bark 0.46660158\n",
+      "gun_shot 0.37804163\n",
       "\n",
       "The actual label: cough\n"
      ]
@@ -399,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +390,7 @@
       "now using mix-up with rate 0.000000\n",
       "now process vggsound-eval-subset\n",
       "use dataset mean -5.077 and std 4.453 to normalize the input.\n",
-      "number of classes is 4\n"
+      "number of classes is 5\n"
      ]
     }
    ],
@@ -461,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -506,14 +469,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acc: 0.9943\n"
+     "ename": "IndexError",
+     "evalue": "index 3 is out of bounds for axis 1 with size 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m warnings\u001b[38;5;241m.\u001b[39mcatch_warnings():\n\u001b[1;32m     10\u001b[0m     warnings\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m     stats \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_stats\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredictions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mskips\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mauc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Skipping AUC since not our focus\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Measure performance according to the main metric\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m batch_dataset_args\u001b[38;5;241m.\u001b[39mmain_metric \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmAP\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "File \u001b[0;32m/mnt/d/OneDrive - Georgia Institute of Technology/Courses/25_3_Fall/CS7643_DL/sound_event_detection/external/audio_mamba/examples/finetuning/../../src/utilities/stats.py:33\u001b[0m, in \u001b[0;36mcalculate_stats\u001b[0;34m(output, target, skips)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# Class-wise statistics\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(classes_num):\n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m     \u001b[38;5;66;03m# Average precision\u001b[39;00m\n\u001b[1;32m     32\u001b[0m     avg_precision \u001b[38;5;241m=\u001b[39m metrics\u001b[38;5;241m.\u001b[39maverage_precision_score(\n\u001b[0;32m---> 33\u001b[0m         target[:, k], \u001b[43moutput\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m, average\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;66;03m# AUC\u001b[39;00m\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauc\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m skips:\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 3 is out of bounds for axis 1 with size 3"
      ]
     }
    ],
@@ -563,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
