modified yamnet output and added sed eval metrics

--- a/notebooks/single_stage_yamnet_frame.ipynb
+++ b/notebooks/single_stage_yamnet_frame.ipynb
@@ -10,65 +10,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "id": "082beddf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-30 01:24:48.479768: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-30 01:24:48.498183: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-30 01:24:49.104401: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-11-30 01:25:06.105425: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-30 01:25:06.118271: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-30 01:25:25.483584: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "finetune_yamnet_tf.py\n",
-    "Full TensorFlow pipeline to fine-tune YAMNet for a small custom label set.\n",
-    "Produces a clip-level classifier on top of YAMNet embeddings, plus sliding-window\n",
-    "inference helper to approximate onset/offset.\n",
-    "\"\"\"\n",
-    "\n",
     "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import sys\n",
     "import pickle\n",
+    "from tqdm import tqdm\n",
     "#%load_ext autoreload\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
-    "if 'KAGGLE_KERNEL_RUN_TYPE' in os.environ:\n",
-    "    path_prefix = ''\n",
-    "else:\n",
-    "    path_prefix = '..'\n",
-    "\n",
-    "split = 'train'\n",
-    "file_path = os.path.join(path_prefix, 'data/detection', split)\n",
-    "\n",
-    "UNFREEZE_YAMNET = True      # set True to fine-tune YamNet weights (careful: small LR)\n",
     "TARGET_SR = 16000            # YAMNet requires 16kHz       \n",
-    "RANDOM_SEED = 0\n",
-    "\n",
-    "# For sliding-window inference (higher temporal resolution)\n",
-    "SLIDING_WIN_SEC = 1.0   # window length for inference\n",
-    "SLIDING_HOP_SEC = 0.1   # hop between windows -> effective temporal resolution\n",
     "\n",
     "#%autoreload 2\n",
-    "from src.models.single_stage_yamnet_frame import *"
+    "from src.models.single_stage_yamnet_frame import *\n",
+    "from src.config import DETECTION_TRAIN_PATH, DETECTION_TEST_PATH, CLASSES\n",
+    "from src.utils.audio_to_spectrograms import display_spectrogram\n",
+    "\n",
+    "import sed_eval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "56bb2d95",
    "metadata": {},
    "outputs": [
@@ -76,22 +45,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['sr', 'S_db', 'files', 'onset', 'offset', 'event_label', 'background_label'])\n"
+      "dict_keys(['sr', 'S_db', 'files', 'onset', 'offset', 'event_label', 'background_label'])\n",
+      "Classes: ['cough', 'dog_bark', 'gun_shot', 'siren', 'car_horn']\n"
      ]
     }
    ],
    "source": [
+    "data_events = pickle.load(open('data/processed/yamnet/spectrograms_train_list.pkl', 'rb'))\n",
     "data = pickle.load(open('data/processed/yamnet/spectrograms_train.pkl', 'rb'))\n",
     "print(data.keys())\n",
-    "classes = np.unique(data['event_label'])\n",
-    "NUM_CLASSES = len(classes)\n",
-    "class_to_id = {c:(i+1) for i,c in enumerate(classes)}\n",
-    "print(\"Classes:\", classes)"
+    "NUM_CLASSES = len(CLASSES)\n",
+    "class_to_id = {c:(i+1) for i,c in enumerate(CLASSES)} # id to start from 1, 0 is reserved for no event\n",
+    "print(\"Classes:\", CLASSES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "245576e7",
    "metadata": {},
    "outputs": [
@@ -101,7 +71,7 @@
        "400"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,20 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "19873f2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classes: ['car_horn' 'cough' 'dog_bark' 'gun_shot' 'siren']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filepaths = [os.path.join(file_path, file) for file in data['files']]\n",
+    "filepaths = [os.path.join(DETECTION_TRAIN_PATH, file) for file in data['files']]\n",
     "labels = [class_to_id[c] for c in data['event_label']]\n",
     "\n",
     "train_files = [filepaths[i] for i in train_idx]\n",
@@ -147,17 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "51e2edbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 50, batch_size = 16, model_save_dir = \"../src/models/yamnet_framewise.keras\")"
+    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 50, batch_size = 16, model_save_dir = \"../src/models/yamnet_framewise.keras\", classes = classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "1f32478e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uncomment to train model again\n",
+    "#trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "77879841",
    "metadata": {},
    "outputs": [
@@ -170,7 +143,6 @@
     }
    ],
    "source": [
-    "#trainer.train()\n",
     "trainer.load_model()"
    ]
   },
@@ -183,83 +155,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "46915d40",
+   "cell_type": "markdown",
+   "id": "ea112e7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Actual label: siren\n",
-      "Actual onset: 1.4041677639819286\n",
-      "Actual offset: 4.726273878383591\n",
-      "['', '', 'siren', 'siren', 'siren', 'siren', 'siren', 'siren', 'siren', '', '', '', '', '', '', '', '', '', '', '']\n",
-      "['', '', 'siren', 'siren', 'siren', 'siren', 'siren', 'siren', 'siren', 'siren', '', '', '', '', '', '', '', '', '', '']\n"
-     ]
-    }
-   ],
    "source": [
-    "i = 0\n",
-    "test_path = val_files[i]\n",
-    "print(f'Actual label: {classes[val_labels[i][2] - 1]}')\n",
-    "print(f'Actual onset: {val_onsets[i]}')\n",
-    "print(f'Actual offset: {val_offsets[i]}')\n",
-    "wav = load_audio_mono(test_path, sr=TARGET_SR)\n",
-    "frame_probs = trainer.predict_frames(wav)  # shape: (n_frames, n_classes)\n",
-    "frame_preds = np.argmax(frame_probs, axis=-1) \n",
-    "print([classes[i-1] if i!= 0 else '' for i in frame_preds])\n",
-    "actual = labels_to_frames(val_labels[i], 20, audio_length=len(wav)/TARGET_SR)\n",
-    "print([classes[i-1] if i!= 0 else '' for i in actual])"
+    "## Sample prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "9d77ce6d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Actual label: dog_bark\n",
-      "Actual onset: 6.460516497831326\n",
-      "Actual offset: 10.0\n",
-      "['', '', '', '', '', '', '', '', '', '', '', '', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark']\n",
-      "['', '', '', '', '', '', '', '', '', '', '', '', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark', 'dog_bark']\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 4\n",
-    "print(f'Actual label: {classes[val_labels[i][2] - 1]}')\n",
-    "print(f'Actual onset: {val_onsets[i]}')\n",
-    "print(f'Actual offset: {val_offsets[i]}')\n",
-    "test_path = val_files[i]\n",
-    "wav = load_audio_mono(test_path, sr=TARGET_SR)\n",
-    "frame_probs = trainer.predict_frames(wav)  # shape: (n_frames, n_classes)\n",
-    "frame_preds = np.argmax(frame_probs, axis=-1) \n",
-    "print([classes[i-1] if i!= 0 else '' for i in frame_preds])\n",
-    "actual = labels_to_frames(val_labels[i], 20, audio_length=len(wav)/TARGET_SR)\n",
-    "print([classes[i-1] if i!= 0 else '' for i in actual])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9710b749",
+   "execution_count": null,
+   "id": "76c4a798",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.audio_to_spectrograms import *"
+    "# format reference events\n",
+    "reference_events = {ref_event['file']: [{'file':ref_event['file'], \n",
+    "                     'event_onset':ref_event['onset'], \n",
+    "                     'event_offset':ref_event['offset'],\n",
+    "                     'event_label':ref_event['event_label']}]\n",
+    "                     for ref_event in data_events}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bf1cb450",
+   "execution_count": 119,
+   "id": "91462f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual label: car_horn\n",
+      "Actual onset: 1.4041677639819286\n",
+      "Actual offset: 4.726273878383591\n",
+      "[{'file': 'train_scene_0000.wav', 'event_onset': 1.0, 'event_offset': 4.5, 'event_label': 'siren'}]\n",
+      "[{'file': 'train_scene_0000.wav', 'event_onset': np.float64(1.4041677639819286), 'event_offset': np.float64(4.726273878383591), 'event_label': 'siren'}]\n",
+      "Event based metrics (onset-offset)\n",
+      "========================================\n",
+      "  Evaluated length                  : 4.73 sec\n",
+      "  Evaluated files                   : 1 \n",
+      "  Evaluate onset                    : True \n",
+      "  Evaluate offset                   : True \n",
+      "  T collar                          : 200.00 ms\n",
+      "  Offset (length)                   : 50.00 %\n",
+      "\n",
+      "  Overall metrics (micro-average)\n",
+      "  ======================================\n",
+      "  F-measure\n",
+      "    F-measure (F1)                  : 0.00 %\n",
+      "    Precision                       : 0.00 %\n",
+      "    Recall                          : 0.00 %\n",
+      "  Error rate\n",
+      "    Error rate (ER)                 : 2.00 \n",
+      "    Substitution rate               : 0.00 \n",
+      "    Deletion rate                   : 1.00 \n",
+      "    Insertion rate                  : 1.00 \n",
+      "\n",
+      "  Class-wise average metrics (macro-average)\n",
+      "  ======================================\n",
+      "  F-measure\n",
+      "    F-measure (F1)                  : 0.00 %\n",
+      "    Precision                       : 0.00 %\n",
+      "    Recall                          : 0.00 %\n",
+      "  Error rate\n",
+      "    Error rate (ER)                 : 0.40 \n",
+      "    Deletion rate                   : 0.20 \n",
+      "    Insertion rate                  : 0.20 \n",
+      "  \n",
+      "\n",
+      "  Class-wise metrics\n",
+      "  ======================================\n",
+      "    Event label  | Nref    Nsys  | F        Pre      Rec    | ER       Del      Ins    |\n",
+      "    ------------ | -----   ----- | ------   ------   ------ | ------   ------   ------ |\n",
+      "    cough        | 0       0     | nan%     nan%     nan%   | 0.00     0.00     0.00   |\n",
+      "    dog_bark     | 0       0     | nan%     nan%     nan%   | 0.00     0.00     0.00   |\n",
+      "    gun_shot     | 0       0     | nan%     nan%     nan%   | 0.00     0.00     0.00   |\n",
+      "    siren        | 1       1     | 0.0%     0.0%     0.0%   | 2.00     1.00     1.00   |\n",
+      "    car_horn     | 0       0     | nan%     nan%     nan%   | 0.00     0.00     0.00   |\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "event_based_metrics_test = sed_eval.sound_event.EventBasedMetrics(CLASSES)\n",
+    "i = 0\n",
+    "test_path = val_files[i]\n",
+    "print(f'Actual label: {CLASSES[val_labels[i][2] - 1]}')\n",
+    "print(f'Actual onset: {val_onsets[i]}')\n",
+    "print(f'Actual offset: {val_offsets[i]}')\n",
+    "frame_probs = trainer.predict_frames(test_path)  # shape: (n_frames, n_classes)\n",
+    "\"\"\"frame_preds = np.argmax(frame_probs, axis=-1) \n",
+    "print([CLASSES[i-1] if i!= 0 else '' for i in frame_preds])\n",
+    "actual = labels_to_frames(val_labels[i], 20, audio_length=len(wav)/TARGET_SR)\n",
+    "print([CLASSES[i-1] if i!= 0 else '' for i in actual])\"\"\"\n",
+    "estimated_event = trainer.predict_events(test_path)\n",
+    "print(estimated_event)\n",
+    "ref_event = reference_events[os.path.basename(test_path)]\n",
+    "print(ref_event)\n",
+    "\n",
+    "event_based_metrics_test.evaluate(\n",
+    "    reference_event_list=ref_event,\n",
+    "    estimated_event_list=estimated_event\n",
+    ")\n",
+    "print(event_based_metrics_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49bde39a",
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +281,53 @@
     }
    ],
    "source": [
-    "i = 1\n",
     "display_spectrogram(data['S_db'][val_idx[i]], data['sr'], val_onsets[i], val_offsets[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e680f8",
+   "metadata": {},
+   "source": [
+    "## Get test set event predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "533f4260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_test = pickle.load(open('data/processed/yamnet/spectrograms_test.pkl', 'rb'))\n",
+    "filepaths_test = [os.path.join(DETECTION_TEST_PATH, file) for file in data_test['files']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "38c7037e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [01:37<00:00,  5.15it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimated_event_outputs = {}\n",
+    "for i in tqdm(range(len(filepaths_test))):\n",
+    "    test_path = filepaths_test[i]\n",
+    "    frame_probs = trainer.predict_frames(test_path)  # shape: (n_frames, n_classes)\n",
+    "    estimated_event = trainer.predict_events(test_path)\n",
+    "    estimated_event_outputs[os.path.basename(test_path)] = estimated_event\n",
+    "\n",
+    "os.makedirs(\"outputs\", exist_ok=True)\n",
+    "with open(f\"outputs/single_stage_yamnet.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(estimated_event_outputs, f)"
    ]
   }
  ],
