added check to make sure pkl file exists

--- a/notebooks/single_stage_yamnet_frame.ipynb
+++ b/notebooks/single_stage_yamnet_frame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "id": "082beddf",
    "metadata": {},
    "outputs": [],
@@ -37,19 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "56bb2d95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['sr', 'S_db', 'files', 'onset', 'offset', 'event_label', 'background_label'])\n",
-      "Classes: ['cough', 'dog_bark', 'gun_shot', 'siren', 'car_horn']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_events = pickle.load(open('data/processed/yamnet/spectrograms_train_list.pkl', 'rb'))\n",
     "data = pickle.load(open('data/processed/yamnet/spectrograms_train.pkl', 'rb'))\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "245576e7",
    "metadata": {},
    "outputs": [
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "19873f2a",
    "metadata": {},
    "outputs": [],
@@ -109,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "51e2edbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 50, batch_size = 16, model_save_dir = \"../src/models/yamnet_framewise.keras\", classes = classes)"
+    "trainer = Trainer(train_files, train_labels, val_files, val_labels, lr = 1e-4, epochs = 50, batch_size = 16, model_save_dir = \"../src/models/yamnet_framewise.keras\", classes = CLASSES)"
    ]
   },
   {
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "91462f0f",
    "metadata": {},
    "outputs": [
@@ -246,8 +237,9 @@
     "print(f'Actual label: {CLASSES[val_labels[i][2] - 1]}')\n",
     "print(f'Actual onset: {val_onsets[i]}')\n",
     "print(f'Actual offset: {val_offsets[i]}')\n",
+    "\"\"\"\n",
     "frame_probs = trainer.predict_frames(test_path)  # shape: (n_frames, n_classes)\n",
-    "\"\"\"frame_preds = np.argmax(frame_probs, axis=-1) \n",
+    "frame_preds = np.argmax(frame_probs, axis=-1) \n",
     "print([CLASSES[i-1] if i!= 0 else '' for i in frame_preds])\n",
     "actual = labels_to_frames(val_labels[i], 20, audio_length=len(wav)/TARGET_SR)\n",
     "print([CLASSES[i-1] if i!= 0 else '' for i in actual])\"\"\"\n",
@@ -305,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "38c7037e",
    "metadata": {},
    "outputs": [
@@ -321,7 +313,6 @@
     "estimated_event_outputs = {}\n",
     "for i in tqdm(range(len(filepaths_test))):\n",
     "    test_path = filepaths_test[i]\n",
-    "    frame_probs = trainer.predict_frames(test_path)  # shape: (n_frames, n_classes)\n",
     "    estimated_event = trainer.predict_events(test_path)\n",
     "    estimated_event_outputs[os.path.basename(test_path)] = estimated_event\n",
     "\n",
