--- a/notebooks/evaluation_test.ipynb
+++ b/notebooks/evaluation_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "1d6d901d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "cc6eb502",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "db5af036",
    "metadata": {},
    "outputs": [
@@ -77,20 +77,16 @@
      "data": {
       "text/plain": [
        "[{'file': 'test_snipped_scene_0000.wav',\n",
-       "  'event_onset': 0.975609756097561,\n",
-       "  'event_offset': 3.902439024390244,\n",
+       "  'event_onset': 0.96,\n",
+       "  'event_offset': 3.84,\n",
        "  'event_label': 'siren'},\n",
        " {'file': 'test_snipped_scene_0000.wav',\n",
-       "  'event_onset': 3.902439024390244,\n",
-       "  'event_offset': 5.365853658536585,\n",
-       "  'event_label': 'car_horn'},\n",
-       " {'file': 'test_snipped_scene_0000.wav',\n",
-       "  'event_onset': 5.365853658536585,\n",
-       "  'event_offset': 5.853658536585366,\n",
-       "  'event_label': 'gun_shot'}]"
+       "  'event_onset': 3.84,\n",
+       "  'event_offset': 5.76,\n",
+       "  'event_label': 'car_horn'}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "55e262b1",
    "metadata": {},
    "outputs": [],
@@ -114,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "356bc63b",
    "metadata": {},
    "outputs": [],
@@ -129,31 +125,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "03d8dd44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'file': 'test_snipped_scene_0000.wav',\n",
-       "  'event_onset': np.float64(1.5601864044243652),\n",
-       "  'event_offset': np.float64(5.414698876079694),\n",
-       "  'event_label': 'siren'}]"
+       "[{'file': 'test_snipped_scene_0002.wav',\n",
+       "  'event_onset': np.float64(3.59310837808072),\n",
+       "  'event_offset': np.float64(6.195754211414053),\n",
+       "  'event_label': 'cough'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gt_event_dict['test_snipped_scene_0000.wav']"
+    "gt_event_dict['test_snipped_scene_0002.wav']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "4178ab45",
    "metadata": {},
    "outputs": [
@@ -161,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-12-02 00:50:00.598\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mcalculate_metrics\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mMetrics not implemented!\u001b[0m\n"
+      "\u001b[32m2025-12-02 20:33:09.615\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mcalculate_metrics\u001b[0m:\u001b[36m15\u001b[0m - \u001b[33m\u001b[1mMetrics not implemented!\u001b[0m\n"
      ]
     },
     {
@@ -180,87 +176,87 @@
       "  Overall metrics (micro-average)\n",
       "  ======================================\n",
       "  F-measure\n",
-      "    F-measure (F1)                  : 38.21 %\n",
-      "    Precision                       : 30.77 %\n",
-      "    Recall                          : 50.40 %\n",
+      "    F-measure (F1)                  : 48.76 %\n",
+      "    Precision                       : 45.14 %\n",
+      "    Recall                          : 53.00 %\n",
       "  Error rate\n",
-      "    Error rate (ER)                 : 1.61 \n",
+      "    Error rate (ER)                 : 1.09 \n",
       "    Substitution rate               : 0.02 \n",
-      "    Deletion rate                   : 0.47 \n",
-      "    Insertion rate                  : 1.11 \n",
+      "    Deletion rate                   : 0.45 \n",
+      "    Insertion rate                  : 0.62 \n",
       "\n",
       "  Class-wise average metrics (macro-average)\n",
       "  ======================================\n",
       "  F-measure\n",
-      "    F-measure (F1)                  : 39.62 %\n",
-      "    Precision                       : 32.61 %\n",
-      "    Recall                          : 50.71 %\n",
+      "    F-measure (F1)                  : 49.46 %\n",
+      "    Precision                       : 46.35 %\n",
+      "    Recall                          : 53.20 %\n",
       "  Error rate\n",
-      "    Error rate (ER)                 : 1.62 \n",
-      "    Deletion rate                   : 0.49 \n",
-      "    Insertion rate                  : 1.13 \n",
+      "    Error rate (ER)                 : 1.11 \n",
+      "    Deletion rate                   : 0.47 \n",
+      "    Insertion rate                  : 0.64 \n",
       "  \n",
       "\n",
       "  Class-wise metrics\n",
       "  ======================================\n",
       "    Event label  | Nref    Nsys  | F        Pre      Rec    | ER       Del      Ins    |\n",
       "    ------------ | -----   ----- | ------   ------   ------ | ------   ------   ------ |\n",
-      "    cough        | 96      202   | 14.1%    10.4%    21.9%  | 2.67     0.78     1.89   |\n",
-      "    dog_bark     | 115     184   | 30.1%    24.5%    39.1%  | 1.82     0.61     1.21   |\n",
-      "    gun_shot     | 94      135   | 41.9%    35.6%    51.1%  | 1.41     0.49     0.93   |\n",
-      "    siren        | 101     156   | 56.0%    46.2%    71.3%  | 1.12     0.29     0.83   |\n",
-      "    car_horn     | 94      142   | 55.9%    46.5%    70.2%  | 1.11     0.30     0.81   |\n",
+      "    cough        | 96      131   | 25.6%    22.1%    30.2%  | 1.76     0.70     1.06   |\n",
+      "    dog_bark     | 115     129   | 41.8%    39.5%    44.3%  | 1.23     0.56     0.68   |\n",
+      "    gun_shot     | 94      109   | 48.3%    45.0%    52.1%  | 1.12     0.48     0.64   |\n",
+      "    siren        | 101     120   | 66.1%    60.8%    72.3%  | 0.74     0.28     0.47   |\n",
+      "    car_horn     | 94      98    | 65.6%    64.3%    67.0%  | 0.70     0.33     0.37   |\n",
       "\n",
       "\n",
       "Segment based metrics\n",
       "========================================\n",
-      "  Evaluated length                  : 4190.66 sec\n",
+      "  Evaluated length                  : 4157.68 sec\n",
       "  Evaluated files                   : 500 \n",
       "  Segment length                    : 1.00 sec\n",
       "\n",
       "  Overall metrics (micro-average)\n",
       "  ======================================\n",
       "  F-measure\n",
-      "    F-measure (F1)                  : 78.83 %\n",
-      "    Precision                       : 75.47 %\n",
-      "    Recall                          : 82.49 %\n",
+      "    F-measure (F1)                  : 82.59 %\n",
+      "    Precision                       : 83.77 %\n",
+      "    Recall                          : 81.44 %\n",
       "  Error rate\n",
-      "    Error rate (ER)                 : 0.39 \n",
-      "    Substitution rate               : 0.05 \n",
-      "    Deletion rate                   : 0.13 \n",
-      "    Insertion rate                  : 0.22 \n",
+      "    Error rate (ER)                 : 0.31 \n",
+      "    Substitution rate               : 0.04 \n",
+      "    Deletion rate                   : 0.15 \n",
+      "    Insertion rate                  : 0.12 \n",
       "  Accuracy\n",
-      "    Sensitivity                     : 82.49 %\n",
-      "    Specificity                     : 97.21 %\n",
-      "    Balanced accuracy               : 89.85 %\n",
-      "    Accuracy                        : 95.82 %\n",
+      "    Sensitivity                     : 81.44 %\n",
+      "    Specificity                     : 98.35 %\n",
+      "    Balanced accuracy               : 89.90 %\n",
+      "    Accuracy                        : 96.75 %\n",
       "\n",
       "  Class-wise average metrics (macro-average)\n",
       "  ======================================\n",
       "  F-measure\n",
-      "    F-measure (F1)                  : 79.16 %\n",
-      "    Precision                       : 75.26 %\n",
-      "    Recall                          : 84.03 %\n",
+      "    F-measure (F1)                  : 82.90 %\n",
+      "    Precision                       : 83.55 %\n",
+      "    Recall                          : 82.81 %\n",
       "  Error rate\n",
-      "    Error rate (ER)                 : 0.44 \n",
-      "    Deletion rate                   : 0.16 \n",
-      "    Insertion rate                  : 0.28 \n",
+      "    Error rate (ER)                 : 0.34 \n",
+      "    Deletion rate                   : 0.17 \n",
+      "    Insertion rate                  : 0.17 \n",
       "  Accuracy\n",
-      "    Sensitivity                     : 84.03 %\n",
-      "    Specificity                     : 97.21 %\n",
-      "    Balanced accuracy               : 90.62 %\n",
-      "    Accuracy                        : 95.82 %\n",
+      "    Sensitivity                     : 82.81 %\n",
+      "    Specificity                     : 98.35 %\n",
+      "    Balanced accuracy               : 90.58 %\n",
+      "    Accuracy                        : 96.75 %\n",
       "  \n",
       "\n",
       "  Class-wise metrics\n",
       "  ======================================\n",
       "    Event label  | Nref    Nsys  | F        Pre      Rec    | ER       Del      Ins    | Sens     Spec     Bacc     Acc     \n",
       "    ------------ | -----   ----- | ------   ------   ------ | ------   ------   ------ | ------   ------   ------   ------  \n",
-      "    cough        | 580     523   | 72.7%    76.7%    69.1%  | 0.52     0.31     0.21   | 69.1%    96.8%    83.0%    93.2%   \n",
-      "    dog_bark     | 387     439   | 75.5%    71.1%    80.6%  | 0.52     0.19     0.33   | 80.6%    96.9%    88.7%    95.4%   \n",
-      "    gun_shot     | 396     437   | 81.9%    78.0%    86.1%  | 0.38     0.14     0.24   | 86.1%    97.6%    91.9%    96.6%   \n",
-      "    siren        | 426     506   | 84.8%    78.1%    92.7%  | 0.33     0.07     0.26   | 92.7%    97.2%    95.0%    96.8%   \n",
-      "    car_horn     | 296     374   | 80.9%    72.5%    91.6%  | 0.43     0.08     0.35   | 91.6%    97.5%    94.5%    97.1%   \n",
+      "    cough        | 580     457   | 76.8%    87.1%    68.6%  | 0.42     0.31     0.10   | 68.6%    98.5%    83.5%    94.5%   \n",
+      "    dog_bark     | 387     392   | 79.3%    78.8%    79.8%  | 0.42     0.20     0.21   | 79.8%    97.9%    88.9%    96.3%   \n",
+      "    gun_shot     | 396     395   | 85.7%    85.8%    85.6%  | 0.29     0.14     0.14   | 85.6%    98.6%    92.1%    97.4%   \n",
+      "    siren        | 426     463   | 88.0%    84.4%    91.8%  | 0.25     0.08     0.17   | 91.8%    98.2%    95.0%    97.6%   \n",
+      "    car_horn     | 296     320   | 84.7%    81.6%    88.2%  | 0.32     0.12     0.20   | 88.2%    98.6%    93.4%    97.9%   \n",
       "\n",
       "\n"
      ]
